--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,5 +10,18 @@
     <li><a href="users">Users</a></li>
     <li><a href="meals">Meals</a></li>
 </ul>
+<br>
+<br>
+
+<form action="users" method="post">
+    <select name="Login">
+        <option>Choose user</option>
+        <option name="userId" value="1">User1</option>
+        <option name="userId" value="2">User2</option>
+    </select>
+  <br><br> <input type="submit"/>
+</form>
+
+
 </body>
 </html>
